# gz

./: .gitignore  AGENTS.md
docs/: inspection_robot_analysis.md
scripts/: build_and_test.sh
ws_inspect/: frames_2025-10-03_19.34.41.gv  frames_2025-10-03_19.42.46.gv
ws_inspect/install/: local_setup.sh  setup.sh
ws_inspect/install/inspection_bringup/share/inspection_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_inspect/install/inspection_mission/lib/inspection_mission/: mission_node
ws_inspect/install/inspection_mission/share/inspection_mission/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws_inspect/install/inspection_thermal/lib/inspection_thermal/: thermal_alarm_node
ws_inspect/log/: latest_build  latest_test  latest_test-result
ws_inspect/src/inspection_bringup/: package.xml  setup.py
ws_inspect/src/inspection_bringup/config/: costmap_common.yaml  localization.yaml  nav2_params.yaml
ws_inspect/src/inspection_bringup/launch/: sim_all.launch.py  sim_nav2.launch.py  sim_world.launch.py
ws_inspect/src/inspection_bringup/resource/: inspection_bringup
ws_inspect/src/inspection_bringup/scripts/: odom_to_tf
ws_inspect/src/inspection_mission/: package.xml  setup.py
ws_inspect/src/inspection_mission/params/: mission.yaml
ws_inspect/src/inspection_mission/scripts/: mission_node
ws_inspect/src/inspection_mission/src/: mission_node.py
ws_inspect/src/inspection_mission/src/inspection_mission/: mission_node.py
ws_inspect/src/inspection_mission/tests/: test_mission_node.py
ws_inspect/src/inspection_thermal/: package.xml  setup.py
ws_inspect/src/inspection_thermal/params/: thermal.yaml
ws_inspect/src/inspection_thermal/scripts/: thermal_alarm_node
ws_inspect/src/inspection_thermal/src/inspection_thermal/: thermal_alarm_node.py
ws_inspect/src/inspection_thermal/tests/: test_thermal_alarm.py
ws_inspect/src/sim_world_assets/worlds/: port_belt_corridor_fixed.sdf
(+19 files in other folders)
