<?xml version="1.0"?>
<package format="3">
  <name>inspection_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration bundle for the inspection simulation stack.</description>
  <maintainer email="vincent@example.com">Vincent</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
