<?xml version="1.0"?>
<package format="3">
  <name>inspection_mission</name>
  <version>0.1.0</version>
  <description>Waypoint-driven inspection mission node.</description>
  <maintainer email="vincent@example.com">Vincent</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_pytest</test_depend>
</package>
